Fixed annoying scroll issues.
1. Made the height slightly smaller so that if the container div is
full, you can’t have both the tops and the bottoms of the clocks not
cut off.
2. Made the clocks div overflow-y scroll, which causes the scrolling to
only happen within the clocks div. Might make the fixed positioning of
other elements unnecessary but why fix what’s not broken.
3. Animated the div to scroll to the bottom whenever a clock is added
to the DOM

--- a/pages/index.css
+++ b/pages/index.css
@@ -29,6 +29,8 @@ body
 	margin-top: 0px;
 	padding-top: 65px;
 	padding-bottom: 50px;
+	overflow-y: scroll;
+	height: 100%;
 }
 
 #clocks div
